# ContractHomework

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeUserPresets.json  addcontactdialog.cpp  addcontactdialog.h  addcontactdialog.ui  analysiswindow.cpp  analysiswindow.h  analysiswindow.ui  contact.cpp  contact.h  contactbookwindow.cpp  contactbookwindow.h  contactbookwindow.ui  editcontactdialog.cpp  editcontactdialog.h  editcontactdialog.ui  fontmanager.cpp  fontmanager.h  fonts.qrc  imageutils.cpp  imageutils.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  vcpkg.json
Data/: contacts_tinf.txt  contacts_xdyp.txt  gift_draw.txt  gift_food.txt  gift_memory.txt  gift_plant.txt
include/: Contact.h  ContactListView.h  SocialAnalyzer.h
src/: Contact.cpp  ContactListView.cpp  SocialAnalyzer.cpp
